guestbook/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-argo
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: hello-argo
  template:
    metadata:
      labels:
        app: hello-argo
    spec:
      containers:
      - image: datawire/hello-world
        name: hello-argo
        ports:
        - containerPort: 8000
